--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="MuseeAudio.MainWindow"
+﻿<Window x:Class="SymmetricalJourney.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MuseeAudio"
+        xmlns:local="clr-namespace:SymmetricalJourney"
         mc:Ignorable="d"
-        Title="Mussee Audio" Height="250" Width="800">
+        Title="Symmetrical Journey" Height="250" Width="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
